--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+     mavenCentral()  
  	maven { url "https://jitpack.io" }
 }
 configurations.all {
@@ -22,5 +23,8 @@ configurations.all {
 }
 // In this section you declare the dependencies for your production and test code
 dependencies {
-   compile 'com.github.be3short:HybridSystemsEnvironment:v1.0.0'
+	compile 'org.slf4j:slf4j-api:1.7.21'
+ 	testCompile 'junit:junit:4.12'
+ 	//compile 'com.github.be3short:HSEStockMarketAnalysisLibrary:-SNAPSHOT'
+   	compile 'com.github.be3short:HybridSystemsEnvironment:v1.0.0'
 }
